macros/src/task_graph/parser/tests/snapshots/macros__task_graph__parser__tests__atomic_single_task.snap
---
source: macros/src/task_graph/parser/tests/mod.rs
expression: ast
---
TaskGraphAst {
    graphs: [
        Graph {
            entry: Declaration(
                Task {
                    var: Some(
                        "a",
                    ),
                    typ: "TaskA",
                },
            ),
            conns: [],
            span_info: SpanInfo {
                span: Span,
                at_call_site: false,
            },
        },
    ],
}
